--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor Submissions</title>
   </head>
   <body>
-    <h1>Frontend Mentor Submissions</h1>
-
-    <ul>
-      <li><a href="/qr-code-component/index.html">QR Code Component</a></li>
-    </ul>
+    <main id="projects">
+      <div class="container">
+        <h1>Frontend Mentor Submissions</h1>
+        <div class="project-grid">
+          <div class="project-card">
+            <img
+              src="/qr-code-component/design/desktop-design.jpg"
+              alt="project card image"
+            />
+            <div>
+              <h2 class="project-card-title">
+                <a href="/qr-code-component/index.html">QR Code Component</a>
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
