Added Interactive Rating Component

--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
               </ul>
             </div>
           </div>
+          <div class="project-card">
+            <div class="project-card-img">
+              <a href="/interactive-rating-component/index.html">
+                <img
+                  src="/interactive-rating-component/design/desktop-design.jpg"
+                  alt="project card image"
+                />
+              </a>
+            </div>
+            <div class="project-card-content">
+              <h2 class="project-card-title">
+                <a href="/interactive-rating-component/index.html"
+                  >Interactive Rating Component</a
+                >
+              </h2>
+              <ul class="tags">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </main>
