--- a/profile-card-component/index.html
+++ b/profile-card-component/index.html
@@ -51,7 +51,7 @@
 
     <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Hyron</a>.
   </div> -->
   </body>
 </html>
