fixed accessibility issue

--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -21,7 +21,7 @@
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
-    <main class="car-types" role="main">
+    <main class="car-types">
       <div class="car-preview bg-bo">
         <div class="car-icon">
           <img src="images/icon-sedans.svg" alt="sedan icon" />
