--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           >
         </header>
 
+        <!-- QR Code Component -->
         <div class="project-grid">
           <div class="project-card">
             <div class="project-card-img">
@@ -46,6 +47,8 @@
               </ul>
             </div>
           </div>
+
+          <!-- Product Preview Card Component -->
           <div class="project-card">
             <div class="project-card-img">
               <a href="/product-preview-card-component/index.html">
@@ -67,6 +70,8 @@
               </ul>
             </div>
           </div>
+
+          <!-- Interactive Rating Component -->
           <div class="project-card">
             <div class="project-card-img">
               <a href="/interactive-rating-component/index.html">
@@ -89,6 +94,8 @@
               </ul>
             </div>
           </div>
+
+          <!-- Profile Card Component -->
           <div class="project-card">
             <div class="project-card-img">
               <a href="/profile-card-component/index.html">
@@ -110,6 +117,8 @@
               </ul>
             </div>
           </div>
+
+          <!-- 3 Column Preview Card Component -->
           <div class="project-card">
             <div class="project-card-img">
               <a href="/3-column-preview-card-component/index.html">
@@ -128,6 +137,30 @@
               <ul class="tags">
                 <li>HTML</li>
                 <li>CSS</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Article Preview Component -->
+          <div class="project-card">
+            <div class="project-card-img">
+              <a href="/article-preview-component/index.html">
+                <img
+                  src="/article-preview-component/design/desktop-design.jpg"
+                  alt="project card image"
+                />
+              </a>
+            </div>
+            <div class="project-card-content">
+              <h2 class="project-card-title">
+                <a href="/article-preview-component/index.html"
+                  >Article Preview Component</a
+                >
+              </h2>
+              <ul class="tags">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
               </ul>
             </div>
           </div>
