Fixed accessibility issue

--- a/article-preview-component/index.html
+++ b/article-preview-component/index.html
@@ -57,18 +57,23 @@
               </div>
             </div>
             <div class="article-share">
-              <a id="share-btn" href="#" title="share" target="_blank"
+              <a
+                id="share-btn"
+                href="#"
+                aria-label="share"
+                title="share"
+                target="_blank"
                 ><i class="fas fa-share"></i
               ></a>
               <div id="share-box">
                 <p>Share</p>
-                <a href="#" target="_blank"
+                <a href="#" aria-label="facebook" target="_blank"
                   ><i class="fa-brands fa-square-facebook"></i
                 ></a>
-                <a href="#" target="_blank"
+                <a href="#" aria-label="twitter" target="_blank"
                   ><i class="fa-brands fa-twitter"></i
                 ></a>
-                <a href="#" target="_blank"
+                <a href="#" aria-label="fa-pinterest" target="_blank"
                   ><i class="fa-brands fa-pinterest"></i
                 ></a>
               </div>
