Add Stats preview card component project

--- a/index.html
+++ b/index.html
@@ -164,7 +164,30 @@
               </ul>
             </div>
           </div>
-        </div>
+
+          <!-- Stats Preview Card Component -->
+          <div class="project-card">
+            <div class="project-card-img">
+              <a href="/stats-preview-card-component/index.html">
+                <img
+                  src="/stats-preview-card-component/design/desktop-design.jpg"
+                  alt="project card image"
+                />
+              </a>
+            </div>
+            <div class="project-card-content">
+              <h2 class="project-card-title">
+                <a href="/stats-preview-card-component/index.html"
+                  >3 Column Card Component</a
+                >
+              </h2>
+              <ul class="tags">
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
+          </div>
+
       </div>
     </main>
   </body>
