Added Order summary component

--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor Submissions</title>
   </head>
@@ -17,7 +14,8 @@
     <main id="projects">
       <div class="container">
         <header>
-          <h1>Frontend Mentor Submissions</h1>
+          <h1>Frontend Mentor <span>Submissions</span></h1>
+          <p>A collection of all my completed challenges for <a href="https://www.frontendmentor.io/profile/hyrongennike" target="_blank">frontendmentor.io</a></p>
           <a
             href="https://github.com/hyrongennike/frontend-mentor-challenges"
             target="_blank"
@@ -41,6 +39,7 @@
               <h2 class="project-card-title">
                 <a href="/qr-code-component/index.html">QR Code Component</a>
               </h2>
+              <p>22 Aug 2022</p>
               <ul class="tags">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -64,6 +63,7 @@
                   >Product Card Component</a
                 >
               </h2>
+              <p>23 Aug 2022</p>
               <ul class="tags">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -87,6 +87,7 @@
                   >Interactive Rating Component</a
                 >
               </h2>
+              <p>23 Aug 2022</p>
               <ul class="tags">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -111,6 +112,7 @@
                   >Profile Card Component</a
                 >
               </h2>
+              <p>23 Aug 2022</p>
               <ul class="tags">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -134,6 +136,7 @@
                   >3 Column Card Component</a
                 >
               </h2>
+              <p>23 Aug 2022</p>
               <ul class="tags">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -157,6 +160,7 @@
                   >Article Preview Component</a
                 >
               </h2>
+              <p>24 Aug 2022</p>
               <ul class="tags">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -181,6 +185,31 @@
                   >3 Column Card Component</a
                 >
               </h2>
+              <p>24 Aug 2022</p>
+              <ul class="tags">
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Order Summary Card Component -->
+          <div class="project-card">
+            <div class="project-card-img">
+              <a href="/order-summary-component/index.html">
+                <img
+                  src="/order-summary-component/design/desktop-design.jpg"
+                  alt="project card image"
+                />
+              </a>
+            </div>
+            <div class="project-card-content">
+              <h2 class="project-card-title">
+                <a href="/order-summary-component/index.html"
+                  >Order Summary Component</a
+                >
+              </h2>
+              <p>25 Aug 2022</p>
               <ul class="tags">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -190,5 +219,9 @@
 
       </div>
     </main>
+
+    <footer>
+      <p>&copy; Hyron Gennike - 2022</p>
+    </footer>
   </body>
 </html>
