Add Single price grid component project

--- a/index.html
+++ b/index.html
@@ -217,6 +217,30 @@
             </div>
           </div>
 
+          <!-- Single Price Grid Component -->
+          <div class="project-card">
+            <div class="project-card-img">
+              <a href="/single-price-grid-component/index.html">
+                <img
+                  src="/single-price-grid-component/design/desktop-design.jpg"
+                  alt="project card image"
+                />
+              </a>
+            </div>
+            <div class="project-card-content">
+              <h2 class="project-card-title">
+                <a href="/single-price-grid-component/index.html"
+                  >Single Price Grid Component</a
+                >
+              </h2>
+              <p>26 Aug 2022</p>
+              <ul class="tags">
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
+          </div>
+
       </div>
     </main>
 
