Added Intro section with dropdown navigation project

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor Submissions</title>
   </head>
@@ -15,7 +18,14 @@
       <div class="container">
         <header>
           <h1>Frontend Mentor <span>Submissions</span></h1>
-          <p>A collection of all my completed challenges for <a href="https://www.frontendmentor.io/profile/hyrongennike" target="_blank">frontendmentor.io</a></p>
+          <p>
+            A collection of all my completed challenges for
+            <a
+              href="https://www.frontendmentor.io/profile/hyrongennike"
+              target="_blank"
+              >frontendmentor.io</a
+            >
+          </p>
           <a
             href="https://github.com/hyrongennike/frontend-mentor-challenges"
             target="_blank"
@@ -24,223 +34,247 @@
           >
         </header>
 
-        <!-- QR Code Component -->
+        <!-- Submissions Grid -->
         <div class="project-grid">
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/qr-code-component/index.html">
-                <img
-                  src="/qr-code-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/qr-code-component/index.html">QR Code Component</a>
-              </h2>
-              <p>22 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
+        <!-- Intro Section with dropdown navigation --> 
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/intro-section-with-dropdown-navigation/index.html">
+              <img
+                src="/intro-section-with-dropdown-navigation/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
           </div>
-
-          <!-- Product Preview Card Component -->
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/product-preview-card-component/index.html">
-                <img
-                  src="/product-preview-card-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/product-preview-card-component/index.html"
-                  >Product Card Component</a
-                >
-              </h2>
-              <p>23 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/intro-section-with-dropdown-navigation/index.html"
+                >Single Price Grid Component</a
+              >
+            </h2>
+            <p>27 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+            </ul>
           </div>
+        </div>
 
-          <!-- Interactive Rating Component -->
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/interactive-rating-component/index.html">
-                <img
-                  src="/interactive-rating-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/interactive-rating-component/index.html"
-                  >Interactive Rating Component</a
-                >
-              </h2>
-              <p>23 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
-              </ul>
-            </div>
+        <!-- Single Price Grid Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/single-price-grid-component/index.html">
+              <img
+                src="/single-price-grid-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
           </div>
-
-          <!-- Profile Card Component -->
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/profile-card-component/index.html">
-                <img
-                  src="/profile-card-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/profile-card-component/index.html"
-                  >Profile Card Component</a
-                >
-              </h2>
-              <p>23 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/single-price-grid-component/index.html"
+                >Single Price Grid Component</a
+              >
+            </h2>
+            <p>26 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
           </div>
+        </div>
 
-          <!-- 3 Column Preview Card Component -->
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/3-column-preview-card-component/index.html">
-                <img
-                  src="/3-column-preview-card-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/3-column-preview-card-component/index.html"
-                  >3 Column Card Component</a
-                >
-              </h2>
-              <p>23 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
+        <!-- Order Summary Card Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/order-summary-component/index.html">
+              <img
+                src="/order-summary-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
           </div>
-
-          <!-- Article Preview Component -->
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/article-preview-component/index.html">
-                <img
-                  src="/article-preview-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/article-preview-component/index.html"
-                  >Article Preview Component</a
-                >
-              </h2>
-              <p>24 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
-              </ul>
-            </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/order-summary-component/index.html"
+                >Order Summary Component</a
+              >
+            </h2>
+            <p>25 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
           </div>
+        </div>
 
-          <!-- Stats Preview Card Component -->
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/stats-preview-card-component/index.html">
-                <img
-                  src="/stats-preview-card-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/stats-preview-card-component/index.html"
-                  >3 Column Card Component</a
-                >
-              </h2>
-              <p>24 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
+        <!-- Stats Preview Card Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/stats-preview-card-component/index.html">
+              <img
+                src="/stats-preview-card-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
           </div>
-
-          <!-- Order Summary Card Component -->
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/order-summary-component/index.html">
-                <img
-                  src="/order-summary-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/order-summary-component/index.html"
-                  >Order Summary Component</a
-                >
-              </h2>
-              <p>25 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/stats-preview-card-component/index.html"
+                >3 Column Card Component</a
+              >
+            </h2>
+            <p>24 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
           </div>
+        </div>
 
-          <!-- Single Price Grid Component -->
-          <div class="project-card">
-            <div class="project-card-img">
-              <a href="/single-price-grid-component/index.html">
-                <img
-                  src="/single-price-grid-component/design/desktop-design.jpg"
-                  alt="project card image"
-                />
-              </a>
-            </div>
-            <div class="project-card-content">
-              <h2 class="project-card-title">
-                <a href="/single-price-grid-component/index.html"
-                  >Single Price Grid Component</a
-                >
-              </h2>
-              <p>26 Aug 2022</p>
-              <ul class="tags">
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
+        <!-- Article Preview Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/article-preview-component/index.html">
+              <img
+                src="/article-preview-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
           </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/article-preview-component/index.html"
+                >Article Preview Component</a
+              >
+            </h2>
+            <p>24 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+            </ul>
+          </div>
+        </div>
 
+        <!-- 3 Column Preview Card Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/3-column-preview-card-component/index.html">
+              <img
+                src="/3-column-preview-card-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/3-column-preview-card-component/index.html"
+                >3 Column Card Component</a
+              >
+            </h2>
+            <p>23 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Profile Card Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/profile-card-component/index.html">
+              <img
+                src="/profile-card-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/profile-card-component/index.html"
+                >Profile Card Component</a
+              >
+            </h2>
+            <p>23 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Interactive Rating Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/interactive-rating-component/index.html">
+              <img
+                src="/interactive-rating-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/interactive-rating-component/index.html"
+                >Interactive Rating Component</a
+              >
+            </h2>
+            <p>23 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+            </ul>
+          </div>
+        </div>
+        <!-- Product Preview Card Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/product-preview-card-component/index.html">
+              <img
+                src="/product-preview-card-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/product-preview-card-component/index.html"
+                >Product Card Component</a
+              >
+            </h2>
+            <p>23 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- QR Code Component -->
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/qr-code-component/index.html">
+              <img
+                src="/qr-code-component/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/qr-code-component/index.html">QR Code Component</a>
+            </h2>
+            <p>22 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </main>
 
