Small adjustment to intro section project HTML

--- a/intro-section-with-dropdown-navigation/index.html
+++ b/intro-section-with-dropdown-navigation/index.html
@@ -37,7 +37,7 @@
             aria-expanded="false"
             class="mobile-menu-toggle"
           ></button>
-          <div class="overlay" aria-label="mobile menu overlay"></div>
+          <div class="overlay"></div>
           <div class="nav-bar-menus mobile-nav" data-visible="false">
             <div class="menu-left">
               <div class="flex-row">
