--- a/index.html
+++ b/index.html
@@ -34,8 +34,33 @@
           >
         </header>
 
-        <!-- Submissions Grid -->
+        <!-- Submissions/Projects Grid -->
         <div class="project-grid">
+
+        <!-- Testimonials Grid --> 
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/testimonials-grid-section/index.html">
+              <img
+                src="/testimonials-grid-section/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/testimonials-grid-section/index.html"
+                >Testimonials grid section</a
+              >
+            </h2>
+            <p>27 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+        </div>
+
         <!-- Intro Section with dropdown navigation --> 
         <div class="project-card">
           <div class="project-card-img">
