Add four card feature section project

--- a/index.html
+++ b/index.html
@@ -37,6 +37,31 @@
         <!-- Submissions/Projects Grid -->
         <div class="project-grid">
 
+        <!-- Four car feature section --> 
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/four-card-feature-section/index.html">
+              <img
+                src="/four-card-feature-section/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/four-card-feature-section/index.html"
+                >Four card feature section</a
+              >
+            </h2>
+            <p>28 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Tailwind</li>
+            </ul>
+          </div>
+        </div>
+
         <!-- Testimonials Grid --> 
         <div class="project-card">
           <div class="project-card-img">
