NFT preview card using sass

--- a/index.html
+++ b/index.html
@@ -37,6 +37,31 @@
         <!-- Submissions/Projects Grid -->
         <div class="project-grid">
 
+        <!-- NFT preview card component --> 
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/nft-preview-card-component/dist/index.html">
+              <img
+                src="/nft-preview-card-component/dist/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/nft-preview-card-component/dist/index.html"
+                >NFT preview card component</a
+              >
+            </h2>
+            <p>29 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Tailwind</li>
+            </ul>
+          </div>
+        </div>
+
         <!-- Four car feature section --> 
         <div class="project-card">
           <div class="project-card-img">
