Add Ping coming soon page project

--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
         <!-- NFT preview card component --> 
         <div class="project-card">
           <div class="project-card-img">
+            <a href="/ping-coming-soon-page/dist/index.html">
+              <img
+                src="/ping-coming-soon-page/dist/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/ping-coming-soon-page/dist/index.html"
+                >Ping coming soon page</a
+              >
+            </h2>
+            <p>30 Aug 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- NFT preview card component --> 
+        <div class="project-card">
+          <div class="project-card-img">
             <a href="/nft-preview-card-component/dist/index.html">
               <img
                 src="/nft-preview-card-component/dist/design/desktop-design.jpg"
