Added clipboard landing page project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,32 @@
         <!-- Submissions/Projects Grid -->
         <div class="project-grid">
 
-        <!-- NFT preview card component --> 
+        <!-- Clipboard landing page --> 
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="https://clipboard-copy.netlify.app/">
+              <img
+                src="/clipboard/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="https://clipboard-copy.netlify.app/"
+                >Clipboard landing page</a
+              >
+            </h2>
+            <p>07 September 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Tailwind</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Coming soon page --> 
         <div class="project-card">
           <div class="project-card-img">
             <a href="/ping-coming-soon-page/index.html">
