Added tailwin bookmark landing page project

--- a/index.html
+++ b/index.html
@@ -37,6 +37,32 @@
         <!-- Submissions/Projects Grid -->
         <div class="project-grid">
 
+        <!-- Bookmark landing page --> 
+        <div class="project-card">
+          <div class="project-card-img">
+            <a href="/bookmark-landing-page/index.html">
+              <img
+                src="/bookmark-landing-page/design/desktop-design.jpg"
+                alt="project card image"
+              />
+            </a>
+          </div>
+          <div class="project-card-content">
+            <h2 class="project-card-title">
+              <a href="/bookmark-landing-page/index.html"
+                >Bookmark Langing Page page</a
+              >
+            </h2>
+            <p>09 September 2022</p>
+            <ul class="tags">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+              <li>Tailwind</li>
+            </ul>
+          </div>
+        </div>
+
         <!-- Clipboard landing page --> 
         <div class="project-card">
           <div class="project-card-img">
